# pico-automation-hat

./: .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT_FIXES.md  CONTRIBUTING.md  Makefile  README.md  SETUP.md  bootstrap.sh  lint.sh  pyproject.toml  pyrightconfig.json  typecheck.sh
automation-firmware-serial/: README.md
automation-firmware-wifi/: README.md  config.py.example  main.py
automation-firmware-wifi/umqtt/: __init__.py
automation-gateway/: README.md  deploy.sh  uninstall.sh
automation-gateway/lib/: automation2040w.py
automation-gateway/service/: automation-service.service  automation_service.py  config.json.example
automation-gateway/static/: index.html
firmware-cpp/: CMakeLists.txt  README.md
firmware-cpp/src/: main.cpp
firmware-python/: main.py
firmware-serial/: README.md  flash-firmware.sh
firmware-wifi/: config.py  deploy.sh  http_server.py  index.html  main.py
firmware-wifi/umqtt/: simple.py
host/: README.md  automation-service.service  automation2040w.py  automation_service.py  deploy.sh  requirements.txt  setup.sh  update.sh
host/examples/: basic_control.py  monitor.py  sequencer.py
host/lib/examples/: basic_control.py  monitor.py  sequencer.py
host/service/: README.md  automation-service.service  automation_service.py  config.json.example
web-interface/: README.md
