[project]
name = "pico-automation-hat"
version = "1.0.0"
description = "Control and automation for Pimoroni Automation 2040 W"
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5",
    "flask>=2.3.0",
    "paho-mqtt>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mpremote>=1.20.0",
    "pyright>=1.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
